<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFAFA"
    tools:context=".MainActivity_donor2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="189dp"
        android:layout_height="108dp"
        android:text="@string/details_of_ngo1"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/button3"
        android:layout_width="226dp"
        android:layout_height="75dp"
        android:text="@string/donate_now1"
        android:textColor="#FAF7F7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#210453"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="171dp"
        android:layout_height="114dp"
        android:text="@string/all_abt_ngo"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />
</androidx.constraintlayout.widget.ConstraintLayout>